<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jayktec.DialogaCity.RegistroCityWowser"
    android:background="@drawable/fondo_borde_login"
    android:gravity="center">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/registro_titulo_cabecera"
                android:id="@+id/cabeceraRegistro"
                android:drawableLeft="@drawable/logo"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:gravity="center_vertical" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/RegistroNombre"
                android:hint="@string/registro_hint_nombre"
                android:layout_marginTop="8dp"
                android:inputType="text"
                android:background="@drawable/rectangulo"
                android:layout_below="@+id/cabeceraRegistro" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/RegistroApellido"
                android:layout_below="@+id/RegistroNombre"
                android:hint="@string/registro_hint_apellido"
                android:layout_marginTop="8dp"
                android:inputType="text"
                android:background="@drawable/rectangulo" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/RegistroEmail"
                android:hint="@string/registro_hint_email"
                android:layout_below="@+id/RegistroApellido"
                android:layout_marginTop="8dp"
                android:background="@drawable/rectangulo" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/RegistroPassword"
                android:layout_below="@+id/RegistroEmail"
                android:hint="@string/registro_hint_password"
                android:layout_marginTop="8dp"
                android:background="@drawable/rectangulo" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/RegistroID"
                android:layout_below="@+id/RegistroPassword"
                android:hint="@string/registro_hint_id_usuario"
                android:layout_marginTop="8dp"
                android:inputType="text"
                android:background="@drawable/rectangulo" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/estadoCivil"
                android:layout_below="@+id/RegistroID"
                android:entries="@array/registro_estado_civil_2"
                android:prompt="@string/registro_estado_civil_1"
                android:background="@drawable/rectangulo"
                android:layout_marginTop="8dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/estadoCivil"
                android:layout_marginTop="10dp"
                android:id="@+id/grupoSexo">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registro_sexo"
                    android:id="@+id/textView"
                    android:singleLine="false"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:textColor="@android:color/black" />

                <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registro_sexo_hombre"
                        android:id="@+id/radioHombre"
                        android:checked="true" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registro_sexo_mujer"
                        android:id="@+id/radioMujer"
                        android:singleLine="false" />
                </RadioGroup>
            </LinearLayout>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/imagenWoozie"
                android:layout_alignParentTop="false"
                android:src="@drawable/wowzie"
                android:layout_alignParentBottom="false"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:focusableInTouchMode="false"
                android:layout_below="@+id/grupoSexo" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imagenWoozie"
                android:id="@+id/grupoBotones"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registro_boton_ok"
                    android:id="@+id/BotonRegistroOk"
                    android:drawableLeft="@android:drawable/star_on"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentStart="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registro_boton_cancelar"
                    android:id="@+id/BotonRegistroCancelar"
                    android:layout_alignParentRight="false"
                    android:layout_alignParentEnd="true"
                    android:drawableLeft="@android:drawable/ic_delete" />
            </LinearLayout>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
