<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/fondo_borde_login"
    android:gravity="center">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/custom_menu_header"
        android:fillViewport="true"
        android:background="@android:color/transparent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ventanaEmergente2"

            android:baselineAligned="false"
            android:orientation="vertical"
            android:gravity="center|center_horizontal"
            android:weightSum="1"
            android:clickable="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/registro_titulo_cabecera"
                android:id="@+id/cabeceraAregar"
                android:drawableLeft="@drawable/logo"
                android:textSize="25sp"
                android:textStyle="bold|italic"
                android:gravity="center_vertical" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:gravity="center_vertical"
                android:id="@+id/textoVentanaDenuncia"
                android:textStyle="bold"
                android:typeface="sans"
                android:textColor="#ff0c2265"
                android:layout_gravity="center_horizontal|top"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:background="@drawable/rectangulo2"
                android:layout_below="@+id/cabeceraAregar" />


            <EditText
                android:id="@+id/textoEditableV2"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/textoVentanaDenuncia"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/black"
                android:hint="@string/hint_descripcion_agregar_alerta"
                android:background="@drawable/rectangulo" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/grupoTextoFotoAgregarDenuncias"
                android:layout_below="@+id/textoEditableV2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/agregar_etiqueta_foto"
                    android:id="@+id/etiquetaHayFotoAgregarDenuncia" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/agregar_etiqueta_resultado"
                    android:id="@+id/etiquetaSINOAgregaDenuncia" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/grupoTextoFotoAgregarDenuncias"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:id="@+id/grupoBotontesAgregarDenuncias">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_foto_alerta"
                    android:id="@+id/btnV22"
                    android:drawableLeft="@android:drawable/ic_menu_camera"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                    android:layout_marginRight="10dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnV21"
                    android:text="@string/btn_guardar_alerta"
                    android:drawableLeft="@android:drawable/ic_menu_save"
                    android:cropToPadding="false"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" />
            </LinearLayout>

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/fotoVentanaAgregarDenuncia"
                android:visibility="gone"
                android:background="@android:drawable/ic_menu_gallery"
                android:layout_gravity="right"
                android:layout_below="@+id/textoEditableV2"
                android:layout_marginTop="10dp"
                android:focusableInTouchMode="false"
                android:layout_alignRight="@+id/textoEditableV2" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/BotonCerrarAgregaDenuncia"
                android:layout_alignParentTop="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentEnd="true"
                android:background="@android:drawable/btn_dialog"
                android:layout_alignTop="@+id/textoVentanaDenuncia"
                android:layout_alignRight="@+id/textoVentanaDenuncia" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>