<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jayktec.DialogaCity.MostrarImagen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/registro_titulo_cabecera"
        android:id="@+id/cabecerMostrarImagen"
        android:drawableLeft="@drawable/logo"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:gravity="center_vertical" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cabecerMostrarImagen"
        android:id="@+id/ScrollVentanaConsulta"
        android:layout_margin="15dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mostrar_imagen_descripcion"
                android:id="@+id/MostrarImgEtiqDescrip"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:textColorLink="@android:color/darker_gray"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/MostrarImgEtiqDetalle"
                android:layout_below="@+id/MostrarImgEtiqDescrip"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="15dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/MostrarImagenVentanaImagen"

                android:layout_below="@+id/MostrarImgEtiqDetalle"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mostrar_imagen_boton_ok"
                android:id="@+id/MostrarImagenBotonOK"
                android:layout_below="@+id/MostrarImagenVentanaImagen"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp" />

        </RelativeLayout>
    </ScrollView>



</RelativeLayout>
